<resources>
    <string name="app_name">Factory Menu</string>
    <string name="str_factory_adc">ADC Adjust</string>
    <string name="str_factory_adc_source">Source</string>
    <string name="str_factory_adc_rgain">R Gain</string>
    <string name="str_factory_adc_ggain">G Gain</string>
    <string name="str_factory_adc_bgain">B Gain</string>
    <string name="str_factory_adc_roffset">R Offset</string>
    <string name="str_factory_adc_goffset">G Offset</string>
    <string name="str_factory_adc_boffset">B Offset</string>
    <string name="str_factory_adc_phase">phase</string>
    <string name="str_factory_adc_autoadjust">Auto Tune</string>
    <string name="str_factory_adc_autoadjust_val">Please Wait!</string>
    <string name="str_factory_adc_autoadjust_ok">success</string>
    <string name="str_factory_adc_autoadjust_failed">failed</string>
    <string name="str_factory_adc_autoadjust_timing_mode_err">timing mode select error</string>
    <string name="str_text_adc_adjust">ADC Adjust</string>
    <string name="str_textview_factory_adc_source_val">VGA</string>
    <string name="str_textview_factory_adc_rgain_val">50</string>
    <string name="str_textview_factory_adc_ggain_val">50</string>
    <string name="str_textview_factory_adc_bgain_val">50</string>
    <string name="str_textview_factory_adc_roffset_val">50</string>
    <string name="str_textview_factory_adc_goffset_val">50</string>
    <string name="str_textview_factory_adc_boffset_val">50</string>
    <string name="str_textview_factory_adc_phase_val">50</string>
    <string name="str_textview_factory_dialogmenu_title">Are You Sure Upgrade?</string>
    <string name="str_textview_factory_dialogmenu_confirm">Confirm</string>
    <string name="str_textview_factory_dialogmenu_cancel">Cancel</string>
    <string name="str_picture_menu">Picture</string>
    <string name="str_sound_menu">Sound</string>
    <string name="str_user_menu">User Setting</string>
    <string name="str_upgrade_menu">Upgrade</string>
    <string name="str_factory_menu">Factory Menu</string>
    <string name="str_factory_whitebalance">White Balance</string>
    <string name="str_factory_wbadjust_source">Source</string>
    <string name="str_factory_wbadjust_rgain">R Gain</string>
    <string name="str_factory_wbadjust_ggain">G Gain</string>
    <string name="str_factory_wbadjust_bgain">B Gain</string>
    <string name="str_factory_wbadjust_roffset">R Offset</string>
    <string name="str_factory_wbadjust_goffset">G Offset</string>
    <string name="str_factory_wbadjust_boffset">B Offset</string>
    <string name="str_factory_wbadjust_autoadjust">Auto Adjust</string>
    <string name="str_factory_wbadjust_colortemp">Color Temperature</string>
    <string name="str_wb_adjust_text">W/B Adjust</string>
    <string name="str_textview_factory_wbadjust_source_val">VGA</string>
    <string name="str_textview_factory_wbadjust_colortemp_val">VGA</string>
    <string name="str_textview_factory_wbadjust_default_val">50</string>
    <string name="str_factory_picture">Picture</string>
    <string name="str_factory_picturemode">Picture Mode</string>
    <string name="str_factory_picmode_picmode">Picture Mode</string>
    <string name="str_factory_picmode_brightness">Brightness</string>
    <string name="str_factory_picmode_contrast">Contrast</string>
    <string name="str_factory_picmode_saturation">Saturation</string>
    <string name="str_factory_picmode_hue">Hue</string>
    <string name="str_factory_picmode_sharpness">Sharpness</string>
    <string name="str_factory_picmode_backlight">Backlight</string>
    <string name="str_picture_mode_text">Picture Mode</string>
    <string name="str_textview_factory_picmode_picmode_val">VGA</string>
    <string name="str_textview_factory_picmode_default_val">50</string>
    <string-array name="str_arr_pic_mode_vals">
        <item>Lightness</item>
        <item>Standard</item>
        <item>Soft</item>
        <item>User</item>
    </string-array>
    <string name="str_factory_non_standard">Non-standard options</string>
    <string name="str_factory_nonstandard_vif">VIF  (click me)</string>
    <string name="str_factory_nonstandard_vd">VD  (click me)</string>
    <string name="str_factory_nonstandard_audio">AUDIO  (click me)</string>
    <string name="str_factory_nonstandard_viftop">VIF_TOP</string>
    <string name="str_factory_nonstandard_vifvgamaximum">VIF_VGA_MAXIMUM</string>
    <string name="str_factory_nonstandard_vifcpkp">VIF_CR_KP</string>
    <string name="str_factory_nonstandard_vifcpki">VIF_CR_KI</string>
    <string name="str_factory_nonstandard_vifasiasignaloption">VIF_ASIA_SIGNAL_OPTION</string>
    <string name="str_factory_nonstandard_vifcpkpkiadjust">VIF_CR_KP_KI_ADJUST</string>
    <string name="str_factory_nonstandard_vifovermodulation">VIF_OVER_MODULATION</string>
    <string name="str_factory_nonstandard_vifclampgain">VIF_CLAMPGAIN_GAIN_OV_NEGATIVE</string>
    <string name="str_factory_nonstandard_chinadescrambler">CHINA_DESCRAMBLER_BOX</string>
    <string name="str_factory_nonstandard_chinadescrambler_delay">China_DES_BOX_Delay</string>
    <string name="str_factory_nonstandard_delay">Delay</string>
    <string name="str_factory_nonstandard_vifcrthr">VIF_CR_THR</string>
    <string name="str_factory_nonstandard_vifversion">VIF_VERSION</string>
    <string name="str_factory_nonstandard_vifagcref">VIF_AGC_REF</string>
    <string name="str_factory_nonstandard_gaindistributionthr">GAIN_DISTRIBUTION_THR</string>
    <string name="str_factory_nonstandard_afecd4">AFEC_D4</string>
    <string name="str_factory_nonstandard_aefcd5">AFEC_D5[2]</string>
    <string name="str_factory_nonstandard_aefcd8">AFEC_D8[3:0]</string>
    <string name="str_factory_nonstandard_aefcd9">AFEC_D9[0]</string>
    <string name="str_factory_nonstandard_aefcd7high">AFEC_D7_HIGH_BOUN</string>
    <string name="str_factory_nonstandard_aefcd7">AFEC_D7_LOW_BOUN</string>
    <string name="str_factory_nonstandard_aefca0">AFEC_A0</string>
    <string name="str_factory_nonstandard_aefca1">AFEC_A1</string>
    <string name="str_factory_nonstandard_aefc66">AFEC_66[7:6]</string>
    <string name="str_factory_nonstandard_aefc6e">AFEC_6E[7:4]</string>
    <string name="str_factory_nonstandard_aefc6elow">AFEC_6E[3:0]</string>
    <string name="str_factory_nonstandard_aefc43">VD_AUTO_AGC</string>
    <string name="str_factory_nonstandard_aefc44">AFEC_44</string>
    <string name="str_factory_nonstandard_aefccb">AFEC_CB</string>
    <string name="str_factory_nonstandard_vddsp">VD_DSP_VERSION</string>
    <string name="str_factory_nonstandard_audiohidev">AUDIO_HIDEV_MODE</string>
    <string name="str_factory_nonstandard_audionr">AUDIO_NR_THR</string>
    <string name="str_factory_nonstandard_audiosif">Audio Sif Threshold</string>
    <string name="str_factory_nonstandard_audiodsp">AUDIO_DSP_VERSION</string>
    <string name="str_Non_Standard_Adjust_text">Non-Standard Options</string>
    <string name="str_vif_text">VIF</string>
    <string name="str_vd_text">VD</string>
    <string name="str_audio_text">AUDIO</string>
    <string name="str_textview_factory_nonstandard_default_val">128</string>
    <string name="str_factory_pq">PQ</string>
    <string name="str_textview_factory_pq">PQ　Adjust</string>
    <string name="str_factory_pq_source">Source</string>
    <string name="str_textview_factory_pq_source_val">VGA</string>
    <string name="str_textview_factory_pq_gamma">GAMMA</string>
    <string name="str_textview_factory_pq_gamma_val">Normal</string>
    <string name="str_textview_factory_pq_dlc">DLC</string>
    <string name="str_textview_factory_pq_dlc_val">2</string>
    <string name="str_textview_factory_pq_colorqmap">Color QMAP</string>
    <string name="str_textview_factory_pq_qmap">QMAP</string>
    <string name="str_textview_factory_pq_pqselectval">2</string>
    <string name="str_textview_factory_pq_color_setting">COLOR SETTING</string>
    <string name="str_textview_factory_pq_luma_setting">LUMA SETTING</string>
    <string name="str_textview_factory_pq_peaking_setting">PEAKING SETTING</string>
    <string name="str_textview_factory_pq_nr_setting">NR SETTING</string>
    <string name="str_textview_factory_pq_cti">CTI</string>
    <string name="str_textview_factory_pq_reload">Reload PQ</string>
    <string name="str_textview_factory_pq_vip">VIP</string>
    <string name="str_textview_factory_pq_pqselect_ihc">IHC</string>
    <string name="str_textview_factory_pq_pqselect_ihcval">1</string>
    <string name="str_textview_factory_pq_pqselect_icc">ICC</string>
    <string name="str_textview_factory_pq_pqselect_iccval">1</string>
    <string name="str_textview_factory_pq_pqselect_ibc">IBC</string>
    <string name="str_textview_factory_pq_pqselect_ibcval">1</string>
    <string name="str_textview_factory_pq_colorsetting">Color Setting</string>
    <string name="str_textview_factory_pq_colorsetting_icc">ICC</string>
    <string name="str_textview_factory_pq_colorsetting_ibc">IBC</string>
    <string name="str_textview_factory_pq_colorsetting_ihc">IHC</string>
    <string name="str_textview_factory_pq_colorsetting_icc_enable">ENABLE</string>
    <string name="str_textview_factory_pq_colorsetting_icc_r">R</string>
    <string name="str_textview_factory_pq_colorsetting_icc_g">G</string>
    <string name="str_textview_factory_pq_colorsetting_icc_b">B</string>
    <string name="str_textview_factory_pq_colorsetting_icc_c">C</string>
    <string name="str_textview_factory_pq_colorsetting_icc_m">M</string>
    <string name="str_textview_factory_pq_colorsetting_icc_y">Y</string>
    <string name="str_textview_factory_pq_colorsetting_icc_f">F</string>
    <string name="str_textview_factory_pq_colorsetting_icc_gy">GY</string>
    <string name="str_textview_factory_pq_colorsetting_icc_by">BY</string>
    <string name="str_textview_factory_pq_colorsetting_icc_flesh">Flesh</string>
    <string name="str_textview_factory_pq_colorsetting_icc_reddish">Flesh-Reddish</string>
    <string name="str_textview_factory_pq_colorsetting_icc_lip">Flesh-Lip</string>
    <string name="str_textview_factory_pq_colorsetting_icc_hair">Flesh-Yellow Hair</string>
    <string name="str_textview_factory_pq_colorsetting_icc_meat">Flesh-Meat</string>
    <string name="str_textview_factory_pq_colorsetting_icc_dark">Flesh-Dark Flesh</string>
    <string name="str_textview_factory_pq_colorsetting_ibc_enable">ENABLE</string>
    <string name="str_textview_factory_pq_colorsetting_ibc_r">R</string>
    <string name="str_textview_factory_pq_colorsetting_ibc_g">G</string>
    <string name="str_textview_factory_pq_colorsetting_ibc_b">B</string>
    <string name="str_textview_factory_pq_colorsetting_ibc_c">C</string>
    <string name="str_textview_factory_pq_colorsetting_ibc_m">M</string>
    <string name="str_textview_factory_pq_colorsetting_ibc_y">Y</string>
    <string name="str_textview_factory_pq_colorsetting_ibc_f">F</string>
    <string name="str_textview_factory_pq_colorsetting_ibc_gy">GY</string>
    <string name="str_textview_factory_pq_colorsetting_ibc_by">BY</string>
    <string name="str_factory_peq">PEQ</string>
    <string name="str_textview_factory_otheroption_text_off">Off</string>
    <string name="str_design_menu_sound">Sound Adjust</string>
    <string name="str_factory_avc_enable">Avc Enable</string>
    <string name="str_factory_avc_threthold">Avc Thl</string>
    <string name="str_factory_drc_enable">Drc Enable</string>
    <string name="str_factory_drc_threthold">Drc Thl</string>
    <string name="str_factory_sound_effect">Effect(HPF)</string>
    <string name="str_factory_sound_toneffect">Tone</string>
    <string name="str_factory_audio_delay">Audio Delay(speaker)</string>
    <string name="str_factory_audio_nr">Audio NR</string>
    <string name="str_factory_lineout">LineOut(AUOUT1)</string>
    <string name="str_factory_speaker">Volume(AUOUT0)</string>
    <string name="str_factory_audio_spdif_delay">Audio Delay(spdif)</string>
</resources>